--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
       <div class="frame">
       </div>
       <div id="main">
-        <div><img src="안경쓴플랫베어.jpeg" width="250px"></div>
+        <div><img src="glassbear.jpeg" width="250px"></div>
         <div id="Hello">Hello!<br>I'm Chae hyun.<p>This is my 1st web page.</p></div>
       </div>
       <div calss="frame">
