--- a/Yummy.html
+++ b/Yummy.html
@@ -19,8 +19,8 @@
       </nav>
     </header>
     <div class="food">
-      <img src="곱창전골.gif">
-      <img src="대방어.jpeg">
+      <img src="food1.gif">
+      <img src="foo2.jpeg">
     </div>
   </body>
 </html>
