--- a/Yummy.html
+++ b/Yummy.html
@@ -20,7 +20,7 @@
     </header>
     <div class="food">
       <img src="food1.gif">
-      <img src="foo2.jpeg">
+      <img src="food2.jpeg">
     </div>
   </body>
 </html>
