--- a/Yummy.html
+++ b/Yummy.html
@@ -12,8 +12,8 @@
         <ul id="Nav_name">
           <li><a href="Home.html" title="Home">Home</a></li>
           <li><a href="Yummy.html">Yummy</a></li>
-          <li><a href="">To do list</a></li>
-          <li><a href="">Time</a></li>
+          <li><a href="TodoList.html">To do list</a></li>
+          <li><a href="Project.html">Project</a></li>
           <li><a href="">Calender</a></li>
         </ul>
       </nav>
