Minigame_Numbering baseball 1st ver.

--- a/baseball.html
+++ b/baseball.html
@@ -14,6 +14,6 @@
         </form>
         <div>
         <span>남은 기회는 <span id="chance"></span>회 입니다.</span>
-        <script src="숫자야구.js"></script>
+        <script src="baseball.js"></script>
     </body>
 </html>
