--- a/Project.html
+++ b/Project.html
@@ -22,7 +22,7 @@
         <div class = "project">
           <div id= "baseball">
             <h1> 모여봐요 숫자숫자</h1> <p>숫자야구 게임</p>
-            <button type="button" class = "Go" id = "baseballGo">Let's go!</button>
+            <button type="button" class = "Go" onclick="window.open('http://jello-kim.github.io/Introduce/baseball.html')">Let's go!</button>
             <div>
               <img src="baseball.png" width="10%">
             </div>
